[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/multi/components/MultiPlayerStatus.gd" type="Script" id=1]
[ext_resource path="res://addons/multi/bindpopup/MultiPlayerBindPopupInner.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MultiPlayerBindPopupInner" type="VBoxContainer"]
margin_right = 172.0
margin_bottom = 108.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 202.0
margin_bottom = 173.0
custom_constants/margin_right = 15
custom_constants/margin_top = 50
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 50.0
margin_right = 187.0
margin_bottom = 158.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiPlayerStatus" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 172.0
margin_bottom = 80.0
rect_min_size = Vector2( 172, 80 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 1 )
show_controller_status = true
open_bind_popup_on_click = false

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 172.0
margin_bottom = 84.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 172.0
margin_bottom = 108.0
size_flags_horizontal = 3
alignment = 1

[node name="ButtonUnbind" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Unbind"

[node name="ButtonOK" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "OK"
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonUnbind" to="." method="_on_ButtonUnbind_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonOK" to="." method="_on_ButtonOK_pressed"]
